@@ -1,3 +1,7 @@
+Version 2009121601
++ When use()ing from test files, look in t first. Fixes issue #52824.
++ POD and Kwalitee tests.
+
 Version 2009040801
 + Modernized Makefile.PL (partially by chorny)
 
